examples/test/testpolicy15889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15889
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key26: value47
      key0: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value7
          key14: value45
      podSelector:
        matchLabels:
          key22: value39
          key7: value22
